--- a/src/modules/content/components/recentPosts/recentPosts.component.scss
+++ b/src/modules/content/components/recentPosts/recentPosts.component.scss
@@ -1,135 +1,3 @@
-@import "../../../../variables";
-
-.about-me {
+.recent-posts-title {
   text-align: center;
-}
-
-.about-me h2 {
-  font-size: 30px;
-}
-
-.about-me p {
-  margin-top: 38px;
-  margin-bottom: 0;
-  font-size: 14px;
-  line-height: 1.85rem;
-  color: #afafaf;
-}
-
-.recent-posts {
-  padding-top: 1px;
-  margin-top: 12px;
-}
-
-.recent-post-wrap {
-  margin-top: 42px;
-  text-align: center;
-}
-
-.recent-post-wrap .posted-date {
-  margin-top: 26px;
-  font-size: 11px;
-  letter-spacing: $smallLetterSpacing;
-  text-transform: uppercase;
-  color: #afafaf;
-}
-
-.recent-post-wrap figure {
-  margin: 0;
-}
-
-.recent-post-wrap figure img {
-  max-width: 100%;
-}
-
-.recent-post-wrap h3 {
-  margin-top: 2px;
-}
-
-.recent-post-wrap h3 a {
-  font-size: 18px;
-  color: #2f2f2f;
-}
-
-.recent-post-wrap .tags-links {
-  margin-top: 12px;
-}
-
-.recent-post-wrap .tags-links a {
-  margin-right: 5px;
-  font-size: 12px;
-  color: #afafaf;
-}
-
-@media screen and (min-width: 576px) {
-  .recent-post-wrap {
-      text-align: left;
-  }
-}
-
-@media screen and (min-width: 576px) and (max-width: 992px) {
-  .recent-post-wrap {
-      display: flex;
-  }
-
-  .recent-post-wrap figure {
-      width: 260px;
-      margin: 0 60px 0 0;
-  }
-
-  .recent-post-wrap .entry-header {
-      width: calc(100% - 300px);
-  }
-}
-
-.sidebar .tags-list {
-  margin-top: 100px;
-  text-align: center;
-}
-
-.sidebar .tags-list a {
-  display: inline-block;
-  margin-right: 7px;
-  margin-bottom: 7px;
-  padding: 14px 25px;
-  font-size: 11px;
-  color: #fff;
-  background: #2f2f2f;
-  text-transform: uppercase;
-  letter-spacing: $smallLetterSpacing;
-}
-
-@media screen and (min-width: 576px) {
-  .sidebar .tags-list {
-      text-align: left;
-  }
-}
-
-.sidebar-ads {
-  margin-top: 100px;
-  text-align: center;
-}
-
-.sidebar-ads img {
-  width: 100%;
-}
-
-@media screen and (min-width: 576px) {
-  .sidebar-ads {
-      text-align: left;
-  }
-}
-
-.sidebar {
-  margin-top: 110px;
-}
-
-.single-page .sidebar {
-  margin-top: 165px;
-}
-
-@media screen and (min-width: 992px){
-  .single-page .sidebar {
-      margin-top: 290px;
-  }
 }
